@@ -1,3 +1,7 @@
+2005-03-11  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* permview.cs: Added XML output of permissions;
+
 2005-03-07  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* ChangeLog: Track changes to permview;
